Feat : Swagger UI Description 추가   Docker 관련 파일 추가   Firebase token 폴더 비활성

--- a/knu-shuttle-bus-server/src/main/resources/application.properties
+++ b/knu-shuttle-bus-server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=KNU Shuttle Bus System Server
+
+#Spring DataSource
+spring.profiles.include=database
+
+#Spring JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+
+#Firebase Cloud Messaging
+firebase.credentials-file-path = firebase/admin-sdk-key.json
