--- a/knu-shuttle-bus-server/build.gradle
+++ b/knu-shuttle-bus-server/build.gradle
@@ -13,6 +13,10 @@ java {
 	}
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -41,6 +45,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
 
 // jar {
 // 	enabled = false
